# ChildrenTraining

./: .gitignore  C++ - Ярлык.lnk  Hello_world.bat  Password.bat  README.md  Синтаксис Lua.lua
Batch/: ClearTemp.bat  Dance.bat  bolshe-menshe.bat  dance.txt  kamen-nozhnicy-bumaga.bat  kvadrat.bat  strokovyj_kalkuljator.bat  treugolnik.bat  treugolnik2.bat
C#/: Generator.cs  HelloWorld.cs  MoveCube.cs  MyScript.cs  Start.bat
C#/Audio/: Program.cs
C#/Clock/: FormClock.cs  (+3 more)
C++/: Hello world.cpp  Tablica.cpp
C++/Synergy/3_Upgrade/Upgrade_01/: CMakeLists.txt  Upgrade_01-Task_1.vcxproj  Upgrade_01-Task_1.vcxproj.filters  inout.h  print.cpp  Код_с_вебинара_Многофайловая_программа_.docx
F#/: Tutorial.fsx
Go/: Экзаменационная задачка.go
JS/: Snake.html
Java/: Tetris.java  starter.bat
Lua/: Coder.lua  DeCoder - Максим.lua  DeCoder - Матвей.lua  DeCoder - Никита.lua  DeCoder.lua  Lua (ANSI).lua  ShifrN Никита.txt  lib(ANSI).lua  lib.lua  shifr Максим 2.txt  Зачем инопланетянам ресурсы.txt  Синтаксис Lua.lua  Текст - Сергей.txt  Шифр - Сергей.txt  Шифр Матвей.txt  рабочий.txt
Pascal/: LessonArray.pas  ParadoxMH.pas  Polindrom.pas  Больше-меньше AI.pas  Больше-меньше.pas  Куайн на Паскале.pas  Пародокс исправленно.pas  Программы_детям.xlsx  Сортировка пузырьком с графиком.pas
Python/: HW.py  Lesson_0 запуск.py  Lesson_1 данные.py  Lesson_1.py  Lesson_3 цикл+рандом.py  Lesson_4 функции.py  Task_01.py  Task_03 - КНБ.py  Task_04 - Сортировка пузырьком.py
Pyton/: HW.py  HWplus.py
SQL/: lesson.csv  lesson.json  lesson.sql  lesson.txt  lesson.xml  Примеры Join.sql
(+965 files in other folders)
